force-app/main/default/objects/Call_Summary__c/Call_Summary__c.object-meta.xml
<CustomObject>
    <label>Call Summary</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Call Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>