force-app/main/default/objects/Call_Summary__c/fields/Audio_URL__c.field-meta.xml
<CustomField>
    <fullName>Audio_URL__c</fullName>
    <label>Audio URL</label>
    <type>Url</type>
</CustomField>