force-app/main/default/objects/Call_Summary__c/fields/Call_Duration_min__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_min__c</fullName>
    <formula>Call_Duration__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration (min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>