force-app/main/default/objects/Call_Summary__c/fields/Call_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Call_Sentiment__c</fullName>
    <label>Call Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>negative</fullName>
            </value>
            <value>
                <fullName>neutral</fullName>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>positive</fullName>
            </value>
            <value>
                <fullName>unclear</fullName>
            </value>
            <value>
                <fullName>unknown</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>