force-app/main/default/objects/Call_Summary__c/fields/Call_Transcript_1__c.field-meta.xml
<CustomField>
    <fullName>Call_Transcript_1__c</fullName>
    <label>Call Transcript 1</label>
    <type>Url</type>
</CustomField>