force-app/main/default/objects/Call_Summary__c/fields/Call_Transcript_2__c.field-meta.xml
<CustomField>
    <fullName>Call_Transcript_2__c</fullName>
    <label>Call Transcript 2</label>
    <type>Url</type>
</CustomField>