force-app/main/default/objects/Call_Summary__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>inbound</fullName>
            </value>
            <value>
                <fullName>manual</fullName>
                <label>Manual</label>
            </value>
            <value>
                <fullName>progressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>