force-app/main/default/objects/Call_Summary__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online_Offline_Garden_CRM</fullName>
            </value>
            <value>
                <fullName>Online_Offline_Mumbai_CRM</fullName>
            </value>
            <value>
                <fullName>Online_Offline_MyCity_CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>