force-app/main/default/objects/Call_Summary__c/fields/Checked_by__c.field-meta.xml
<CustomField>
    <fullName>Checked_by__c</fullName>
    <label>Checked by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vishal</fullName>
            </value>
            <value>
                <fullName>Harsh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>