force-app/main/default/objects/Call_Summary__c/fields/Checked_by_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Checked_by_Remarks__c</fullName>
    <label>Checked by - Remarks</label>
    <type>TextArea</type>
</CustomField>