force-app/main/default/objects/Call_Summary__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en-IN</fullName>
            </value>
            <value>
                <fullName>hi-IN</fullName>
            </value>
            <value>
                <fullName>mr-IN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>