force-app/main/default/objects/Call_Summary__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>IF( Booking__c != null,  Booking__r.Project__r.Name ,  IF( Account__c != null,  Account__r.Project_Name__r.Name ,  IF( Lead__c != null,  Lead__r.RW_Project__r.Name ,  IF( Opportunity__c != null,  Opportunity__r.RW_Project__r.Name , null) ) ) )</formula>
    <label>Project</label>
    <type>Text</type>
</CustomField>