force-app/main/default/objects/Call_Summary__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>