force-app/main/default/objects/Call_Summary__c/fields/Summary_Extension__c.field-meta.xml
<CustomField>
    <fullName>Summary_Extension__c</fullName>
    <formula>HYPERLINK(&quot;https://runwal--c.vf.force.com/apex/CallTranscript?id=&quot;+UC_Id__c+&quot;&amp;num=sum&quot;, &quot;Click to see the complete Summary&quot;)</formula>
    <label>Summary Extension</label>
    <type>Text</type>
</CustomField>