force-app/main/default/objects/Call_Summary__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>