force-app/main/default/objects/Call_Summary__c/fields/Transcript_1__c.field-meta.xml
<CustomField>
    <fullName>Transcript_1__c</fullName>
    <label>Transcript 1</label>
    <length>131070</length>
    <type>Html</type>
</CustomField>