force-app/main/default/objects/Call_Summary__c/fields/Transcript_2__c.field-meta.xml
<CustomField>
    <fullName>Transcript_2__c</fullName>
    <label>Transcript 2</label>
    <length>131070</length>
    <type>Html</type>
</CustomField>