force-app/main/default/objects/Call_Summary__c/fields/UC_Id__c.field-meta.xml
<CustomField>
    <fullName>UC_Id__c</fullName>
    <label>UC Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>