force-app/main/default/objects/Call_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>UC_Id__c</columns>
    <columns>Call_Date__c</columns>
    <columns>Call_Sentiment__c</columns>
    <columns>Call_Type__c</columns>
    <columns>Language__c</columns>
    <columns>Topic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>